Fix PR#256 and make casesPlugin less fragile

--- a/csirt.divd.nl/_cases/DIVD-2022-00008.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00008.md
@@ -23,19 +23,19 @@ end:
 timeline:
 - start: 2021-12-14
   end:
-  event:  Reconnaissance emails were sent to target addresses (source: Volexity)
+  event: "Reconnaissance emails were sent to target addresses (source: Volexity)"
 - start: 2021-12-16
   end:
-  event:  Malicious emails containing links to exploit URLs were sent to confirmed target addresses (soure: Volexity)
+  event:  "Malicious emails containing links to exploit URLs were sent to confirmed target addresses (soure: Volexity)"
 - start: 2021-12-16
   end:
-  event:  Volexity notifies Zimbra and provides Proof of Concept (POC) (source: Volexity)
+  event: "Volexity notifies Zimbra and provides Proof of Concept (POC) (source: Volexity)"
 - start: 2022-02-03
   end:
   event:  First publication of this vulnerability
 - start: 2022-02-04
   end:
-  event:  Zimbra made hotfix available (source: Zimbra)
+  event: "Zimbra made hotfix available (source: Zimbra)"
 - start: 2022-02-04
   end:
   event:  DIVD opened case DIVD-2022-00008
