Recommend the use of qupted string in the templates

--- a/csirt.divd.nl/_cases/DIVD-3000-00001.md
+++ b/csirt.divd.nl/_cases/DIVD-3000-00001.md
@@ -27,19 +27,19 @@ end:
 timeline:
 - start: 2021-12-03
   end:
-  event:  Vulnerability reported to Grafana
+  event: "Vulnerability reported to Grafana"
 - start: 2021-12-07
   end:
-  event:  Emergency patches released and full public release
+  event: "Emergency patches released and full public release"
 - start: 2022-01-10
   end:
-  event:  DIVD created a list of vulnerable Grafana instances
+  event: "DIVD created a list of vulnerable Grafana instances"
 - start: 2022-01-18
   end:
-  event:  First version of this case file
+  event: "First version of this case file"
 - start: 2022-01-18
   end:
-  event:  DIVD sent out a first batch of notifications.
+  event: "DIVD sent out a first batch of notifications."
 ips: 0 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
