--- a/csirt.divd.nl/_cases/DIVD-3000-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-3000-00002.md
@@ -27,17 +27,17 @@ end:
 timeline:
 - start: 2021-12-03
   end:
-  event:  Vulnerability reported 
+  event: "Vulnerability reported"
 - start: 2021-12-03
   end:   2021-12-05  
-  event:  Time to acknowledge
+  event: "Time to acknowledge"
   # Time to acknowledge is an important metric we like to track it
 - start: 2022-12-05
   end:
-  event:  Vendor acknowledges receipt of the vulnerability
+  event: "Vendor acknowledges receipt of the vulnerability"
 - start: 2021-12-05
   end:   open
-  event:  Time to patch
+  event: "Time to patch"
   # Time to patch is antoher important metric
 ips: 0 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
