--- a/csirt.divd.nl/_cases/DIVD-2022-00008.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00008.md
@@ -16,7 +16,7 @@ cves:
 - None assigned at the time of writing
 product: Zimbra
 versions: Zimbra 8.8.15 and prior versions
-recommendation: "Users of Zimbra should consider upgrading to version 9.0.0 or contact Zimbra support to apply a temporary hotfix. A definitive fix in version 8.8.15 will be made available as soon as possible."
+recommendation: "Users of Zimbra version 8.8.15 need to re-apply the patch (P30) to obtain the fix for this vulnerability or should consider upgrading to version 9.0.0".
 -workaround: n/a
 start: 2021-12-14
 end:
@@ -48,7 +48,7 @@ timeline:
 - start: 2022-02-06
   end:
   event:  DIVD created a first list of vulnerable Zimbra email servers.
-- start: 2022-02-06
+- start: 2022-02-07
   end:
   event:  First version of this case file.
 
@@ -58,9 +58,8 @@ timeline:
 On the third of February 2022, a new Zero-day XSS Vulnerability in Zimbra was published on the internet. Zimbra is an open source email platform that is used by a variety of organisations. Volexity detected on the 14th of December a campaign containing two attack phases. The first (reconnaissance) phase was used to track if a target received and opened the message(s). The second (delivery) phase was used to lure targets into clicking on a malicious link. For the attack to be successful, the target would have to visit the attacker's link while logged into the Zimbra webmail client from a web browser. By visiting the attacker's link, can the session of the receiver be obtained, this gives the attacker access to the account of the victim.
 
 ## What you can do
-* Users of Zimbra should consider upgrading to version 9.0.0, as there is currently no secure durable version of 8.8.15.
-* If you cannot upgrade for some reason, Zimbra Support should be contacted regarding the available Hotfix.
-* Check the website of Zimbra regularly for a durable fix. 
+* Users of Zimbra version 8.8.15 need to re-apply the patch (P30) to obtain the fix for this vulnerability 
+* or should consider upgrading to version 9.0.0
 
 ## What we are doing
 
@@ -71,4 +70,4 @@ On the third of February 2022, a new Zero-day XSS Vulnerability in Zimbra was pu
 
 ## More information
 * [First publication of Volexity regarding this zeroday](https://www.volexity.com/blog/2022/02/03/operation-emailthief-active-exploitation-of-zero-day-xss-vulnerability-in-zimbra/)
-* [Zimbra Blog regarding this zeroday](https://blog.zimbra.com/2022/02/hotfix-available-5-feb-for-zero-day-exploit-vulnerability-in-zimbra-8-8-15/)
+* [Zimbra fix regarding this vulnerability](https://wiki.zimbra.com/wiki/Zimbra_Releases/8.8.15/P30)
