Fixing PR #260. Need to quote title

--- a/csirt.divd.nl/_cases/DIVD-2022-00008.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00008.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: DIVD-2022-00008 - XSS Zeroday in Zimbra
+title: "DIVD-2022-00008 - XSS Zeroday in Zimbra"
 excerpt: A new Zero-day XSS Vulnerability in Zimbra was published on the internet on the third of February 2022.
 divd: DIVD-2022-00008
 author: Boaz Braaksma
