The dot at the end of line 15 was the problem

--- a/csirt.divd.nl/_cases/DIVD-2022-00008.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00008.md
@@ -1,22 +1,18 @@
 ---
 layout: case
-title: "DIVD-2022-00008 - XSS Zeroday in Zimbra"
-excerpt: A new Zero-day XSS Vulnerability in Zimbra was published on the internet on the third of February 2022.
-divd: DIVD-2022-00008
+title: "XSS Zeroday in Zimbra"
+excerpt: "A new Zero-day XSS Vulnerability in Zimbra was published on the internet on the third of February 2022."
 author: Boaz Braaksma
 lead: Boaz Braaksma
-redirect_from:
-- /DIVD-2022-00008/
 status : Open
 researchers:
 - Ralph Horn
-- Célistine Oosting
+- "Célistine Oosting"
 - Victor Pasman
-cves:
-- None assigned at the time of writing
+cves: None assigned at the time of writing
 product: Zimbra
 versions: Zimbra 8.8.15 and prior versions
-recommendation: "Users of Zimbra version 8.8.15 need to re-apply the patch (P30) to obtain the fix for this vulnerability or should consider upgrading to version 9.0.0".
+recommendation: "Users of Zimbra version 8.8.15 need to re-apply the patch (P30) to obtain the fix for this vulnerability or should consider upgrading to version 9.0.0"
 -workaround: n/a
 start: 2021-12-14
 end:
@@ -38,7 +34,7 @@ timeline:
   event: "Zimbra made hotfix available (source: Zimbra)"
 - start: 2022-02-04
   end:
-  event:  DIVD opened case DIVD-2022-00008
+  event: "DIVD opened case DIVD-2022-00008"
 - start: 2022-02-05
   end:
   event:  DIVD created fingerprint 
@@ -51,7 +47,6 @@ timeline:
 - start: 2022-02-07
   end:
   event:  First version of this case file.
-
 ---
 ## Summary
 
