--- a/csirt.divd.nl/_cases/DIVD-2022-00008.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00008.md
@@ -47,6 +47,9 @@ timeline:
 - start: 2022-02-07
   end:
   event:  First version of this case file.
+- start: 2022-02-07
+  end: 
+  event: DIVD sent out a first batch of notifications.
 ---
 ## Summary
 
