--- a/csirt.divd.nl/_cases/DIVD-2022-00008.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00008.md
@@ -37,7 +37,7 @@ timeline:
   event: "DIVD opened case DIVD-2022-00008"
 - start: 2022-02-05
   end:
-  event:  DIVD created fingerprint 
+  event:  DIVD created fingerprint
 - start: 2022-02-05
   end:
   event:  DIVD started scanning for vulnerable Zimbra email servers
@@ -48,15 +48,21 @@ timeline:
   end:
   event:  First version of this case file.
 - start: 2022-02-07
-  end: 
+  end:
   event: DIVD sent out a first batch of notifications.
+- start: 2022-02-08
+  end:
+  event: DIVD shared data about international systems to various GOV CERTs via NCSC-NL.
+- start: 2022-02-08
+  end:
+  event: DIVD shared data about the NL Space with the Dutch Digital Trust Center.
 ---
 ## Summary
 
 On the third of February 2022, a new Zero-day XSS Vulnerability in Zimbra was published on the internet. Zimbra is an open source email platform that is used by a variety of organisations. Volexity detected on the 14th of December a campaign containing two attack phases. The first (reconnaissance) phase was used to track if a target received and opened the message(s). The second (delivery) phase was used to lure targets into clicking on a malicious link. For the attack to be successful, the target would have to visit the attacker's link while logged into the Zimbra webmail client from a web browser. By visiting the attacker's link, can the session of the receiver be obtained, this gives the attacker access to the account of the victim.
 
 ## What you can do
-* Users of Zimbra version 8.8.15 need to re-apply the patch P30 (8.8.15_GA_4232) to obtain the fix for this vulnerability 
+* Users of Zimbra version 8.8.15 need to re-apply the patch P30 (8.8.15_GA_4232) to obtain the fix for this vulnerability
 * or should consider upgrading to version 9.0.0
 
 ## What we are doing
