--- a/csirt.divd.nl/_cases/DIVD-2021-00030.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00030.md
@@ -7,7 +7,7 @@ author: Jeroen van de Weerd
 lead: Victor Gevers
 redirect_from:
   - /DIVD-2021-00030/
-status : Open
+status : Closed
 excerpt: We will be scanning for CVE-2021-22205
 researchers:
 - Frank Breedijk
@@ -22,20 +22,20 @@ Upgrade to 13.8.8, 13.9.6, and 13.10.3"
 patch_status:	 	Full patched
 -workaround:		n/a
 start: 2021-11-01
-end:
+end: 2021-12-29
 timeline:
 - start: 2021-04-14
   end:
   event: CVE-2021-22205 Reported by the Gitlab team.
 - start: 2021-10-29
   end:
-  event: POC released on Gitlab 
+  event: POC released on Gitlab
 - start: 2021-11-09
   end:
   event: DIVD got a list of vulnerable gitlab servers, from security researchers at [Censys](https://censys.io)
 - start: 2021-11-11
   end:
-  event: First version of this case file 
+  event: First version of this case file
 - start: 2021-11-13
   end:
   event: Validating the received data
@@ -54,7 +54,10 @@ timeline:
 - start: 2021-11-27
   end:
   event: DIVD has released an NMAP script to test for this vulnerability on its [GitHub](https://github.com/DIVD-NL/GitLab-cve-2021-22205-nse)
-ips: 0
+- start: 2021-12-29
+  end:
+  event: With two rounds of notifications sent out, and a change making it no longer possible to reliably verify if systems are still vulnerable we've exhausted our means to notify for this case.
+ips: 7858
 ---
 ## Summary
 
@@ -66,7 +69,7 @@ If you run GitLab CE/EE version starting from 11.9, upgrade to the latest versio
 
 ## What we are doing
 
-We are processing the list of vulnerable gitlab servers. We have sent the first notifications by email. 
+We are processing the list of vulnerable gitlab servers. We have sent the first notifications by email.
 
 {% include timeline.html %}
 
