Adding IPs to 3 cases that missed them

--- a/csirt.divd.nl/_cases/DIVD-2021-00036.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00036.md
@@ -40,6 +40,8 @@ timeline:
 - start: 2022-01-12
   end:
   event: DIVD scanned the internet again, with very few vulnerable hosts remaining this case can be closed.
+
+ips: 82
 ---
 ## Summary
 
