--- a/csirt.divd.nl/_cases/DIVD-2022-00010.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00010.md
@@ -30,7 +30,7 @@ timeline:
 ---
 ## Summary
 
-On Tuesday, February 8, 2022, SAP published a notice detailing a major request smuggling flaw within their SAP NetWeaver, SAP Content Server, and SAP Web Dispatcher products, which SAP claims could lead to authentication bypass.
+On Tuesday, February 8, 2022, SAP published a notice detailing a major request smuggling flaw within their SAP NetWeaver, SAP Content Server, and SAP Web Dispatcher products, which SAP claims could lead to authentication bypass. This vulnerability is tracked as CVE-2022-22537
 
 ## What you can do
 
@@ -43,5 +43,5 @@ On Tuesday, February 8, 2022, SAP published a notice detailing a major request s
 {% include timeline.html %}
 
 ## More information
-* [Bug Alert](https://bugalert.org/content/notices/2022-02-08-sap.html)
+* [CVE](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2022-22536)
 * [SAP Product Information](https://blogs.sap.com/2022/02/08/sap-partners-with-onapsis-to-identify-and-patch-cybersecurity-vulnerabilities/)
