--- a/csirt.divd.nl/_cases/DIVD-2022-00010.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00010.md
@@ -7,6 +7,7 @@ lead: Patrick Hulshof
 status : Open
 researchers:
 - Wietse Boonstra
+- Joris van de Vis
 cves: CVE-2022-22536
 product: SAP
 versions: SAP NetWeaver, SAP Content Server, and SAP Web Dispatcher.
