Reword initial sending of batch

--- a/csirt.divd.nl/_cases/DIVD-2022-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00007.md
@@ -21,9 +21,9 @@ timeline:
 - start: 2022-02-09
   end:
   event: "First scan of CNAMES of .BE domains"
-- start: 2022-02-11
+- start: 2022-02-14
   end:
-  event: DIVD shares first batch of NL space notifications with our Trusted Information Sharing Partner Digital Trust Center, so they can inform vulnerable parties.
+  event: DIVD sends out a first batch of notifications.
 ---
 ## Summary
 
