Diego nieuwe caselead

--- a/csirt.divd.nl/_cases/DIVD-2021-00021.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00021.md
@@ -3,7 +3,7 @@ layout: case
 title: "Qlik Sense Enterprise domain user enumeration"
 excerpt: "Domain user enumeration via response timing"
 author: Hidde Smit
-lead: Victor Gevers
+lead: Diego Klinkhamer
 status : Open
 researchers:
 - Hidde Smit
