--- a/csirt.divd.nl/_cases/DIVD-2022-00006.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00006.md
@@ -34,6 +34,9 @@ timeline:
 - start: 2022-02-10
   end:
   event: Published first version of this case file.
+- start: 2022-02-11
+  end:
+  event: DIVD sent out a first batch of notifications.
 ---
 
 ## Summary
