--- a/csirt.divd.nl/_cases/DIVD-2022-00010.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00010.md
@@ -31,7 +31,13 @@ timeline:
   event:  DIVD starts with identifying owners.
 - start: 2022-02-10
   end:
-  event: DIVD sent out a first batch of notifications.
+  event: DIVD send out a first batch of notifications.
+- start: 2022-02-11
+  end:
+  event: DIVD start a second scan
+- start: 2022-02-13
+  end:
+  event: DIVD send out a second batch of notifications.
 ---
 ## Summary
 
