--- a/csirt.divd.nl/_cases/DIVD-2021-00021.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00021.md
@@ -30,7 +30,7 @@ timeline:
 ---
 ## Summary
 
-On 18 August 2021, DIVD discovered a timing attack vulnerability. This vulnerability can be abused for domain user enumeration. As of November 2021, this vulnerability has been solved by the vendor. CVE-2022-0564 has been assigned to this vulnerability.
+On 18 August 2021, DIVD discovered a timing attack vulnerability. This vulnerability can be abused for domain user enumeration. As of November 2021, this vulnerability has been solved by the vendor. CVE-2022-0564 has been assigned to this vulnerability. Affected systems are only vulnerable if they have LDAP configured.
 
 ## What you can do
 
