--- a/csirt.divd.nl/_cases/DIVD-2021-00039.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00039.md
@@ -38,9 +38,12 @@ timeline:
 - start: 2022-01-07
   end:
   event:  DIVD sent out a first batch of notifications.
-- start: 2022-01-28
+- start: 2022-02-15
   end:
   event: DIVD start rescan.
+- start: 2022-02-15
+  end:
+  event: DIVD sent out a second batch of notifications.
 
 ---
 ## Summary
