Update www.divd.nl/reports/2022-00006 - SAProuter.md
Added brakeline after Joris van de Vis

Co-authored-by: Wouter Schoot <wouter@schoot.org>

--- a/www.divd.nl/reports/2022-00006 - SAProuter.md
+++ b/www.divd.nl/reports/2022-00006 - SAProuter.md
@@ -9,7 +9,7 @@ excerpt: the DIVD scanned for vulnerable SAProuters.
     <span>15 February 2022 by Joris van de Vis</span>
 </header>
 
-Case lead: Joris van de Vis
+Case lead: Joris van de Vis<br>
 CSIRT: Victor Pasman
 Researchers: Victor Pasman / Joris van de Vis
 
