Update case file DIVD-2022-00004

--- a/csirt.divd.nl/_cases/DIVD-2022-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00004.md
@@ -45,7 +45,19 @@ timeline:
 - start: 2022-01-25
   end:
   event:  DIVD starts first round of notifications.
-ips: 8381
+- start: 2022-02-09
+  end:
+  event:  DIVD finishes data leak notifiications.
+- start: 2022-02-16
+  end:
+  event:  DIVD notified 9.354 server owners of malicious activity internationally.
+- start: 2022-02-18
+  end:
+  event:  Dutch Security Information Clearinghouse notifies 291 server owners within the Netherlands.
+- start: 2022-02-18
+  end:
+  event:  DIVD starts monitoring for improvement of the situation.
+ips: 9645
 ---
 ## Summary
 
