Update to subdomain takeovers
- added numbers
- added new items to the timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00007.md
@@ -30,7 +30,28 @@ timeline:
 - start: 2022-02-13
   end:
   event: "First scan of CNAMES of .DE domains"
-ips: 516
+- start: 2022-02-12
+  end: 2022-02-14
+  event: "First scan of CNAMES of .EU domains"
+- start: 2022-02-13
+  end: 2022-02-15
+  event: "First scan of CNAMES of .EDU domains"
+- start: 2022-02-15
+  end:
+  event: "First scan of CNAMES of .UK domains"
+- start: 2022-02-14
+  end: 2022-02-18
+  event: "First scan of CNAMES of .ORG domains"
+- start: 2022-02-18
+  end:
+  event: DIVD sends out a first batch of notifications to DE domain owners.
+- start: 2022-02-18
+  end:
+  event: DIVD sends out a first batch of notifications to EU domain owners.
+- start: 2022-02-18
+  end:
+  event: DIVD sends out a first batch of notifications to EDU domain owners.
+ips: 2373
 
 ---
 ## Summary
