Title is a bit redundant

--- a/csirt.divd.nl/_cases/DIVD-2022-00006.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00006.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: DIVD Case 2022-00006 - SAProuter
+title: SAProuter
 excerpt: DIVD scanned for internet connected SAProuters that respond to information-requests, meaning they are not properly secured.
 author: Joris van de Vis
 lead: Joris van de Vis
