--- a/csirt.divd.nl/_cases/DIVD-2021-00021.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00021.md
@@ -14,7 +14,7 @@ recommendation: "November 2021 patch fixes this vulnerability."
 -workaround: n/a
 jekyll-secinfo:
   cve:
-    url: /cves/CVE-2022-0564
+    url: /cves/CVE-
 start: 2021-08-18
 end:
 timeline:
