--- a/csirt.divd.nl/_cases/DIVD-2022-00012.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00012.md
@@ -17,7 +17,7 @@ researchers:
 - Jonathan Bouman
 - Max van der Horst
 cves:
-- CVE n/a
+- CVE: n/a
 product: n/a
 versions: any
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
