--- a/csirt.divd.nl/_cases/DIVD-2022-00012.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00012.md
@@ -7,6 +7,7 @@ lead: Tom Wolters
 redirect_from:
 - /DIVD-2022-00012/
 status: Open
+excerpt: DIVD is researching vulnerabilities in charities globally and notifying these charities.
 researchers:
 - Tom Wolters
 - Victor Gevers 
