--- a/csirt.divd.nl/_cases/DIVD-2021-00021.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00021.md
@@ -30,6 +30,9 @@ timeline:
 - start: 2022-02-10
   end:
   event:  "DIVD notified about patch by vendor."
+- start: 2022-03-01
+  end:
+  event: "DIVD sent out a first batch of notifications."
 ---
 ## Summary
 
