Update to subdomain takeovers
- added numbers
- added new items to the timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00007.md
@@ -28,30 +28,45 @@ timeline:
   end:
   event: DIVD sends out a first batch of notifications to BE domain owners.
 - start: 2022-02-13
-  end:
-  event: "First scan of CNAMES of .DE domains"
-- start: 2022-02-12
-  end: 2022-02-14
-  event: "First scan of CNAMES of .EU domains"
-- start: 2022-02-13
-  end: 2022-02-15
-  event: "First scan of CNAMES of .EDU domains"
-- start: 2022-02-15
-  end:
-  event: "First scan of CNAMES of .UK domains"
-- start: 2022-02-14
   end: 2022-02-18
-  event: "First scan of CNAMES of .ORG domains"
+  event: "First scan & notify of CNAMES of .DE domains"
+- start: 2022-02-12
+  end:  2022-02-18
+  event: "First scan & notify of CNAMES of .EU domains"
+- start: 2022-02-13
+  end:  2022-02-18
+  event: "First scan & notify of CNAMES of .EDU domains"
+- start: 2022-02-15
+  end: 2022-02-18
+  event: "First scan & notify of CNAMES of .UK domains"
+- start: 2022-02-14
+  end: 2022-03-01
+  event: "First scan & notify of CNAMES of .ORG domains"
 - start: 2022-02-18
-  end:
-  event: DIVD sends out a first batch of notifications to DE domain owners.
+  end: 2022-03-01
+  event: "First scan & notify of CNAMES of .IO domains"
 - start: 2022-02-18
-  end:
-  event: DIVD sends out a first batch of notifications to EU domain owners.
+  end: 2022-03-01
+  event: "First scan & notify of CNAMES of .CO domains"
 - start: 2022-02-18
-  end:
-  event: DIVD sends out a first batch of notifications to EDU domain owners.
-ips: 2373
+  end: 2022-03-01
+  event: "First scan & notify of CNAMES of .FR domains"
+- start: 2022-03-01
+  end: 
+  event: "Second scan & notify of CNAMES of .NL domains"
+- start: 2022-03-01
+  end: 
+  event: "First scan & notify of CNAMES of .DK domains"
+- start: 2022-03-01
+  end: 
+  event: "First scan & notify of CNAMES of .SE domains"
+- start: 2022-03-01
+  end: 
+  event: "First scan & notify of CNAMES of .FI domains"
+- start: 2022-03-01
+  end: 
+  event: "First scan & notify of CNAMES of .NO domains"
+ips: 7501
 
 ---
 ## Summary
