Update to subdomain takeovers
- added numbers
- added new items to the timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00007.md
@@ -52,21 +52,21 @@ timeline:
   end: 2022-03-01
   event: "First scan & notify of CNAMES of .FR domains"
 - start: 2022-03-01
-  end: 
+  end: 2022-03-02
   event: "Second scan & notify of CNAMES of .NL domains"
 - start: 2022-03-01
-  end: 
+  end: 2022-03-02
   event: "First scan & notify of CNAMES of .DK domains"
 - start: 2022-03-01
-  end: 
+  end: 2022-03-02
   event: "First scan & notify of CNAMES of .SE domains"
 - start: 2022-03-01
-  end: 
+  end: 2022-03-02
   event: "First scan & notify of CNAMES of .FI domains"
 - start: 2022-03-01
-  end: 
+  end: 2022-03-02
   event: "First scan & notify of CNAMES of .NO domains"
-ips: 7501
+ips: 12861
 
 ---
 ## Summary
