--- a/csirt.divd.nl/_cases/DIVD-2021-00011.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00011.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: DIVD-2021-00011 - Kaseya VSA Limited Disclosure
+title: DIVD-2021-00011 - Kaseya VSA Disclosure
 divd: DIVD-2021-00011
 short: "Multiple vulnerabilities discovered in Kaseya VSA."
 author: Lennaert Oudshoorn
@@ -79,12 +79,18 @@ timeline:
 - start: 2021-07-07
   end:
   event: Limited publication (after 3 months).
+- start: 2021-06-26
+  end:   2022-04-02
+  event: Time from fix to full disclosure
+- start: 2022-04-02
+  end: 
+  event: Full disclosure
 ips: n/a
 ---
 ## Summary
 One of our researchers found multiple vulnerabilities in Kaseya VSA, which we were in the process of responsible disclosure (or Coordinated Vulnerability Disclosure) with Kaseya, before all these vulnerabilities could be patched a ransomware attack happened using Kaseya VSA.
 
-Ever since we released the news that we indeed notified Kaseya of a vulnerability used in the ransomware attack, we have been getting requests to release details about these vulnerabilities and the disclosure timeline. In line with the guidelines for [Coordinated Vulnerability Disclosure](https://english.ncsc.nl/publications/publications/2019/juni/01/coordinated-vulnerability-disclosure-the-guideline) we have not disclosed any details so far. And, while we feel it is time to be more open about this process and our decisions regarding this matter, we will still not release the full details.
+Ever since we released the news that we indeed notified Kaseya of a vulnerability used in the ransomware attack, we have been getting requests to release details about these vulnerabilities and the disclosure timeline. In line with the guidelines for [Coordinated Vulnerability Disclosure](https://english.ncsc.nl/publications/publications/2019/juni/01/coordinated-vulnerability-disclosure-the-guideline) we have not disclosed any before 7 Juli 2021. And we have now released the full details of the vulnerabilities we discovered.
 
 ## The vulnerabilities
 We notified Kaseya of the following vulnerabilities:
@@ -105,7 +111,7 @@ Cado Security has made a github repository with [Resources for DFIR Professional
 
 We recommend that any Kaseya server is carefully checked for signs of compromise before taking it back into service, including, but not limited to, the IoCs published by Kaseya.
 
-## What we are doing
+## What have done
 The Dutch Institute for Vulnerability Disclosure (DIVD) performs a daily scan to detect vulnerable Kaseya VSA servers and notify the owners directly or via the known abuse channels, Gov-CERTs, and other trusted channels.
 
 We have identified this server by downloading the paths ‘/’, ‘/api/v1.5/cw/environment’ and ‘/install/kaseyalatestversion.xml’ and matching patterns in these files.
@@ -119,3 +125,4 @@ In the past few days we have been working with Kaseya to make sure customers tur
 * [DoublePulsar blog post](https://doublepulsar.com/kaseya-supply-chain-attack-delivers-mass-ransomware-event-to-us-companies-76e4ec6ec64b)
 * [Sophos blog post](https://community.sophos.com/b/security-blog/posts/active-ransomware-attack-on-kaseya-customers)
 * [CISA-FBI Guidance for MSPs and their Customers Affected by the Kaseya VSA Supply-Chain Ransomware Attack](https://us-cert.cisa.gov/ncas/current-activity/2021/07/04/cisa-fbi-guidance-msps-and-their-customers-affected-kaseya-vsa)
+* [Announcement of full disclosure](TODO)
