--- a/csirt.divd.nl/_cases/DIVD-3000-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-3000-00002.md
@@ -42,7 +42,7 @@ timeline:
 ips: 0 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 #
-# The lines below redirect the alle the CVE references to our site
+# The lines below redirect all the CVE references to our site
 #jekyll-secinfo:
 #  cve:
 #    url: /cves/CVE-
