Add suggestion to refer to our site for CVEs (#314)
* Add suggestiont o refer to our site for CVEs

* Update csirt.divd.nl/_cases/DIVD-3000-00002.md

Co-authored-by: Wouter Schoot <w.schoot@divd.nl>

Co-authored-by: Wouter Schoot <w.schoot@divd.nl>

--- a/csirt.divd.nl/_cases/DIVD-3000-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-3000-00002.md
@@ -41,6 +41,11 @@ timeline:
   # Time to patch is antoher important metric
 ips: 0 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
+#
+# The lines below redirect all the CVE references to our site
+#jekyll-secinfo:
+#  cve:
+#    url: /cves/CVE-
 ---
 ## Summary
 
