Update to subdomain takeovers
- added numbers
- added new items to the timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00007.md
@@ -75,7 +75,22 @@ timeline:
 - start: 2022-03-02
   end: 2022-03-03
   event: "First scan & notify of CNAMES of .US domains"
-ips: 32005
+- start: 2022-03-03
+  end: 2022-03-04
+  event: "First scan & notify of CNAMES of .LU domains"
+- start: 2022-03-03
+  end: 2022-03-04
+  event: "First scan & notify of CNAMES of .IE domains"
+- start: 2022-03-03
+  end: 2022-03-04
+  event: "First scan & notify of CNAMES of .PT domains"
+- start: 2022-03-03
+  end: 
+  event: "First scan & notify of CNAMES of .NET domains"
+- start: 2022-03-03
+  end: 
+  event: "First scan & notify of CNAMES of .APP domains"
+ips: 32937
 
 ---
 ## Summary
