--- a/csirt.divd.nl/_cases/DIVD-2022-00014.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00014.md
@@ -1,8 +1,8 @@
 ---
 layout: case
-title: "GrayNoise's Ukraine only list"
-excerpt: "GreyNoise has created a public list of IP addresses that have exclusively been observed in their honeypots in the Ukraine, and not anywhere else.
-We decided to take it upon ourselves to make network administrators aware of the fac that these hosts are on this list."
+title: "GreyNoise's Ukraine only list"
+excerpt: "GreyNoise has created a public list of IP addresses that have exclusively been observed in their honeypots in Ukraine, and not anywhere else.
+We decided to take it upon ourselves to make network administrators aware of the fact that these hosts are on this list."
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
@@ -34,17 +34,17 @@ ips: 0
 ---
 ## Summary
 
-[GreyNoise](https://greynoise.io/) has published a "free, public, unauthenticated, self-updating feed of all IPs that are exclusively targeting devices geographically located in Ukraine's IP space with scans, exploits, etc." We first can aware of it via a [tweet](https://twitter.com/Andrew___Morris/status/1496923547872206852?s=20&t=Y5vBKAso8TRrwief4KpbLg) form GreyNoise founder Andrew Morris. We feel that in these times network administrators should be aware of these IP addresses even if they are unaware of the services of GreyNoise.
+[GreyNoise](https://greynoise.io/) has published a "free, public, unauthenticated, self-updating feed of all IPs that are exclusively targeting devices geographically located in Ukraine's IP space with scans, exploits, etc." We first became aware of it via a [tweet](https://twitter.com/Andrew___Morris/status/1496923547872206852?s=20&t=Y5vBKAso8TRrwief4KpbLg) from GreyNoise founder Andrew Morris. We feel that in these times, network administrators should be aware of these IP addresses even if they are unaware of the services of GreyNoise.
 
-We are using the list of "unspoofed" IPs (IP addresses that have completed a full three way handshake) located on [GreyNoise Pulse](https://www.greynoise.io/viz/pulse). If you want to check other lists, feel free to inspect the [manifest](https://api.greynoise.io/datashots/ukraine/manifest.json) of the full API.
+We are using the list of "unspoofed" IPs (IP addresses that have completed a full three-way handshake) located on [GreyNoise Pulse](https://www.greynoise.io/viz/pulse). If you want to check other lists, feel free to inspect the [manifest](https://api.greynoise.io/datashots/ukraine/manifest.json) of the full API.
 
 ## What you can do
 
-We are sending out these emails for awareness only. We want you to be aware of the fact that you have one or more nodes in your network that are displaying this behaviour. How you act on this information is completely up to you. We cannot determine if this behaviour is expected, unexpected, logical, illogical, wanted or unwanted by you.
+We are sending out these emails for awareness only. We want you to be aware that you have one or more nodes in your network displaying this behavior. How you act on this information is entirely up to you. We cannot determine if this behavior is expected, unexpected, logical, illogical, wanted, or unwanted by you.
 
 ## What we are doing
 
-On a regular basis we will retreive the list from GreyNoise and sent notifications to network administrators. We will only sent out notifications for systems last seen on or after 1 March 2022 and only to system we have not previously sent a notification about.
+On a regular basis, we will retrieve the list from GreyNoise and send notifications to network administrators. We will only send out notifications for systems last seen on or after 1 March 2022 and only to system owners; we have not received a notification before.
 
 {% include timeline.html %}
 
