--- a/csirt.divd.nl/_cases/DIVD-2021-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00023.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: DIVD-2021-00023 - Atlassian Confluence OGNL injection (RCE)
+title: Atlassian Confluence OGNL injection (RCE)
 divd: DIVD-2021-00023
 short: Older versions of Atlassian Confluence are vulnerable to OGNL injection, which allows attackers to take over systems.
 author: Pepijn van der Stap
