--- a/csirt.divd.nl/_cases/DIVD-2021-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00023.md
@@ -40,7 +40,7 @@ In affected versions of Confluence Server and Data Center, an OGNL injection vul
 
 ## What you can do
 
-* If you receive a notification, make sure the vulnerability described in that notification is patched. The notification will be sent along with a location and description of the vulnerability. If you have any questions regarding the mitigation of these vulnerabilities, feel free to reply to the email and we’ll gladly help. 
+If you receive a notification, make sure the vulnerability described in that notification is patched. The notification will be sent along with a location and description of the vulnerability. If you have any questions regarding the mitigation of these vulnerabilities, feel free to reply to the email and we’ll gladly help. 
 
 ## What we are doing
 
