--- a/csirt.divd.nl/_cases/DIVD-2021-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00023.md
@@ -44,6 +44,6 @@ If you receive a notification, make sure the vulnerability described in that not
 
 ## What we are doing
 
-* DIVD is currently searching for vulnerable instances of Confluence. Any party vulnerable to this OGNL injection will be informed. Instead of running code on your system(s) we use the OGNL language to multiply two digits. We then check the response for a valid answer. 
+DIVD is currently searching for vulnerable instances of Confluence. Any party vulnerable to this OGNL injection will be informed. Instead of running code on your system(s) we use the OGNL language to multiply two digits. We then check the response for a valid answer. 
 
 {% include timeline.html %}
