--- a/csirt.divd.nl/_cases/DIVD-2021-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00023.md
@@ -16,7 +16,7 @@ recommendation: "If you received a notification of a vulnerability, patch your s
 patch_status:	Available
 -workaround:		
 start: 2020-12-28
-end:   2020-12-30
+end:   
 timeline:
 - start: 2021-09-01
   end: 2021-09-04
