Add more information

--- a/csirt.divd.nl/_cases/DIVD-2021-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00023.md
@@ -47,3 +47,9 @@ If you receive a notification, make sure the vulnerability described in that not
 DIVD is currently searching for vulnerable instances of Confluence. Any party vulnerable to this OGNL injection will be informed. Instead of running code on your system(s) we use the OGNL language to multiply two digits. We then check the response for a valid answer. 
 
 {% include timeline.html %}
+
+## More information
+
+https://jira.atlassian.com/browse/CONFSERVER-67940
+https://confluence.atlassian.com/doc/confluence-security-advisory-2021-08-25-1077906215.html
+https://therecord.media/confluence-enterprise-servers-targeted-with-recent-vulnerability/
