--- a/csirt.divd.nl/_cases/DIVD-2021-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00023.md
@@ -1,10 +1,9 @@
 ---
 layout: case
-title: Atlassian Confluence OGNL injection (RCE)
-short: Older versions of Atlassian Confluence are vulnerable to OGNL injection, which allows attackers to take over systems.
+title: "Atlassian Confluence OGNL injection (RCE)"
+short: "Older versions of Atlassian Confluence are vulnerable to OGNL injection, which allows attackers to take over systems."
 author: Pepijn van der Stap
 lead: Victor Gevers
-- /DIVD-2021-00023/
 status: Open
 excerpt: In affected versions of Confluence Server and Data Center, an OGNL injection vulnerability exists that would allow an unauthenticated attacker to execute arbitrary code on a Confluence Server or Data Center instance. The affected versions are before version 6.13.23, from version 6.14.0 before 7.4.11, from version 7.5.0 before 7.11.6, and from version 7.12.0 before 7.12.5.
 researchers:
@@ -30,8 +29,6 @@ timeline:
 - start: 2022-03-01
   end:
   event: First version of this case file.
-
-
 ---
 ## Summary
 
