Turn list into clickable list

--- a/csirt.divd.nl/_cases/DIVD-2021-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00023.md
@@ -47,6 +47,6 @@ DIVD is currently searching for vulnerable instances of Confluence. Any party vu
 
 ## More information
 
-https://jira.atlassian.com/browse/CONFSERVER-67940
-https://confluence.atlassian.com/doc/confluence-security-advisory-2021-08-25-1077906215.html
-https://therecord.media/confluence-enterprise-servers-targeted-with-recent-vulnerability/
+* [Atlassian advisory](https://confluence.atlassian.com/doc/confluence-security-advisory-2021-08-25-1077906215.html)
+* [Articles on The Record about actualy abuse of this vulnerability](https://therecord.media/confluence-enterprise-servers-targeted-with-recent-vulnerability/)
+* [Atlassian trouble ticket](https://jira.atlassian.com/browse/CONFSERVER-67940)
