--- a/csirt.divd.nl/_cases/DIVD-2021-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00023.md
@@ -14,21 +14,32 @@ versions: n/a
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 patch_status:	Available
 -workaround:		
-start: 2020-12-28
+start: 2021-09-22
 end:   
 timeline:
 - start: 2021-09-01
-  end: 2021-09-04
+  end: 
   event: Atlassian publishes advisory for CVE-2021-26084.
-- start: 2021-03-01
+- start: 2021-09-22
   end:
-  event: DIVD starts scanning for vulnerabilities.
-- start: 2022-03-01
+  event: DIVD opens case DIVD-2021-00023
+- start: 2021-10-20
   end:
   event: DIVD starts OSINT research.
-- start: 2022-03-01
+- start: 2021-12-29
+  event: Case closed because of low number of vulnerable systems
+- start: 2022-02-20
+  event: Case reopened because significant systems are still affected.
+- start: 2022-03-06
   end:
-  event: First version of this case file.
+  event: Rescanning
+- start: 2022-03-07
+  end:
+  event: First batch of notifications sent out
+- start: 2022-03-08
+  end:
+  event: First version of this case file online
+
 ---
 ## Summary
 
