--- a/csirt.divd.nl/_cases/DIVD-2022-00017.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00017.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: DIVD-2022-00017 - Global Healtcare Vulnerabilities
+title: Global Healtcare Vulnerabilities
 divd: DIVD-2022-00017
 author: Victor Gevers
 lead: Victor Gevers
