--- a/csirt.divd.nl/_cases/DIVD-2021-00029.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00029.md
@@ -68,7 +68,7 @@ ips: n/a
 ---
 ## Summary
 
-On 17 November 2021 the case was created and around the end of 2021 the onboarding began. This concerns Windows servers that are running the latest version of SmarterTrack which was at the time v100.0.8019.14010. Wietse found 4 different vulnerabilities, which are currently all fixed in the latest version.
+On 17 November 2021, the case was created, and around the end of 2021 the investigation began. This concerns Windows servers that are running the latest version of SmarterTrack, which was at the time v100.0.8019.14010. Wietse found four different vulnerabilities, which are currently all fixed in the latest version.
 
 ## What you can do
 
