--- a/csirt.divd.nl/_cases/DIVD-2022-00017.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00017.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: Global Healtcare Vulnerabilities
+title: Global Healthcare Vulnerabilities
 author: Victor Gevers
 lead: Victor Gevers
 status: Open
