--- a/csirt.divd.nl/_cases/DIVD-2021-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00023.md
@@ -58,6 +58,7 @@ DIVD is currently searching for vulnerable instances of Confluence. Any party vu
 
 ## More information
 
+* [Deweaponized check for CVE-2021-26084 Remote Code Execution on Confluence](https://github.com/xstp/CVE-2021-26084)
 * [Atlassian advisory](https://confluence.atlassian.com/doc/confluence-security-advisory-2021-08-25-1077906215.html)
 * [Articles on The Record about actualy abuse of this vulnerability](https://therecord.media/confluence-enterprise-servers-targeted-with-recent-vulnerability/)
 * [Atlassian trouble ticket](https://jira.atlassian.com/browse/CONFSERVER-67940)
