Update to subdomain takeovers
- added numbers
- added new item(s) to the timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00007.md
@@ -84,13 +84,16 @@ timeline:
 - start: 2022-03-03
   end: 2022-03-04
   event: "First scan & notify of CNAMES of .PT domains"
+- start: 2022-03-17
+  end: 2022-03-17
+  event: "First scan & notify of CNAMES of .EE domains"
 - start: 2022-03-03
   end: 
   event: "First scan & notify of CNAMES of .NET domains"
 - start: 2022-03-03
   end: 
   event: "First scan & notify of CNAMES of .APP domains"
-ips: 32937
+ips: 33166
 
 ---
 ## Summary
