--- a/csirt.divd.nl/_cases/DIVD-2022-00012.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00012.md
@@ -37,6 +37,9 @@ timeline:
 - start: 2022-02-27
   end:
   event:  First version of this case file.
+- start: 2022-03-21
+  end: 
+  event: Second batch of notifications sent
 
 
 ---
