--- a/csirt.divd.nl/_cases/DIVD-2022-00021.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00021.md
@@ -20,10 +20,10 @@ end:
 timeline:
 - start: 2021-12-02
   end:
-  event: Invanti publishes security advisory
+  event: Ivanti publishes security advisory
 - start: 2022-02-24 
   end:
-  event: Invanti updates security advisory
+  event: Ivanti updates security advisory
 - start: 2022-03-20
   end:
   event: Proof of concept is being widely shared online
