workaround typo: update -> upgrade

--- a/csirt.divd.nl/_cases/DIVD-2022-00021.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00021.md
@@ -40,7 +40,7 @@ On December 2, 2021, Ivanti published advisory about a critical remote code exec
 
 A backdoor had been added to a third-party library used by this product. Patches and workarounds are available. To remediate this vulnerability, apply Patch 512 to CSA version 4.6. If you are running an older version of the CSA, Ivanti strongly urges you to first upgrade to 4.6 and then apply Patch 512.
 
-If you are unable to update, SSH in to the CSA and execute the following command:
+If you are unable to upgrade, SSH in to the CSA and execute the following command:
 
 ```
 $ sed -i '/Obscure Tokens/{N;N;N;N;N;N;N;N;N;d}' /opt/landesk/broker/webroot/lib/csrf-magic.php
