update DIVD-2022-00021.md timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00021.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00021.md
@@ -30,7 +30,15 @@ timeline:
 - start: 2022-03-25
   end:
   event: DIVD opens case DIVD-2022-00021
-
+- start: 2022-03-25
+  end:
+  event: Scanning
+- start: 2022-03-26
+  end:
+  event: First batch of notifications sent out 
+- start: 2022-03-26
+  end:
+  event: First version of this case file online 
 
 ---
 ## Summary
