--- a/csirt.divd.nl/_cases/DIVD-2022-00022.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00022.md
@@ -2,6 +2,7 @@
 layout: case
 title: DIVD-2022-00022 - WatchGuard Firebox and XTM appliance ACE vulnerability
 divd: DIVD-2022-00022
+excerpt: "On WatchGuard Firebox and XTM appliances, an unauthenticated user can execute arbitrary code. DIVD is actively scanning to notify owners of vulnerable systems."
 author: Max van der Horst
 lead: Victor Gevers
 redirect_from:
