--- a/csirt.divd.nl/_cases/DIVD-2022-00022.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00022.md
@@ -39,7 +39,7 @@ has not been compromised.
 
 ## What you can do
 
-* Ensure you have the latest version of Fireware OS and scan your systemm with the [Cyclops Blink 
+* Ensure you have the latest version of Fireware OS and scan your system with the [Cyclops Blink 
 Detector](https://www.watchguard.com/help/video-tutorials/Cyclops_Blink_Detection_Tools/index.html).
 
 ## What we are doing
