[DIVD 2022-00015] Correct hyperlinks

--- a/csirt.divd.nl/_cases/DIVD-2022-00015.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00015.md
@@ -37,13 +37,13 @@ timeline:
 
 ## What you can do
 
-Update to 14.8.2, 14.7.4, and 14.6.5, see also https://about.gitlab.com/releases/2022/02/25/critical-security-release-gitlab-14-8-2-released/#unauthenticated-user-enumeration-on-graphql-api
+Update to 14.8.2, 14.7.4, and 14.6.5, [see the release blog post](https://about.gitlab.com/releases/2022/02/25/critical-security-release-gitlab-14-8-2-released/#unauthenticated-user-enumeration-on-graphql-api)
 
 Disabling public profiles is also excellent mitigation against unauthenticated information gathering. To disable public profiles, go to the Admin Area -> General -> Visibility and access controls -> Restricted visibility levels. Then check the box next to “Public.” This should prevent anyone who isn’t logged in from seeing user profiles.
 
 If you receive a notification, make sure the vulnerability described in that notification is patched. The notification will be sent along with a location and description of the vulnerability. If you have any questions regarding the mitigation of these vulnerabilities, feel free to reply to the email, and we’ll gladly help.
 
-Fixes and patches provided by Gitlab: https://about.gitlab.com/update/
+Fixes and patches [provided by Gitlab](https://about.gitlab.com/update/)
 
 ## What we are doing
 
