[DIVD-2022-0007] Update to subdomain takeovers
- added numbers
- added new item(s) to the timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00007.md
@@ -88,12 +88,12 @@ timeline:
   end: 2022-03-17
   event: "First scan & notify of CNAMES of .EE domains"
 - start: 2022-03-03
-  end: 
+  end: 2022-04-01
   event: "First scan & notify of CNAMES of .NET domains"
 - start: 2022-03-03
   end: 
   event: "First scan & notify of CNAMES of .APP domains"
-ips: 33166
+ips: 42445
 
 ---
 ## Summary
