--- a/csirt.divd.nl/_cases/DIVD-2022-00024.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00024.md
@@ -36,7 +36,7 @@ timeline:
 ---
 ## Summary
 
-In Spring Cloud Function versions 3.1.6, 3.2.2 and older unsupported versions, when using routing functionality it is possible for a user to provide a specially crafted SpEL as a routing-expression that may result in remote code execution and access to local resources.
+In Spring Cloud Function versions 3.1.6, 3.2.2 and older unsupported versions, when using routing functionality it is possible for a user to provide a specially crafted Spring Expression Language (SpEL) as a routing-expression that may result in remote code execution and access to local resources.
 
 ## What you can do
 
