--- a/csirt.divd.nl/_cases/DIVD-2021-00011.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00011.md
@@ -80,9 +80,9 @@ timeline:
   end:
   event: Limited publication (after 3 months).
 - start: 2021-06-26
-  end:   2022-04-02
+  end:   2022-04-04
   event: Time from fix to full disclosure
-- start: 2022-04-02
+- start: 2022-04-04
   end: 
   event: Full disclosure
 ips: n/a
@@ -125,4 +125,4 @@ In the past few days we have been working with Kaseya to make sure customers tur
 * [DoublePulsar blog post](https://doublepulsar.com/kaseya-supply-chain-attack-delivers-mass-ransomware-event-to-us-companies-76e4ec6ec64b)
 * [Sophos blog post](https://community.sophos.com/b/security-blog/posts/active-ransomware-attack-on-kaseya-customers)
 * [CISA-FBI Guidance for MSPs and their Customers Affected by the Kaseya VSA Supply-Chain Ransomware Attack](https://us-cert.cisa.gov/ncas/current-activity/2021/07/04/cisa-fbi-guidance-msps-and-their-customers-affected-kaseya-vsa)
-* [Announcement of full disclosure](TODO  )
+* [Announcement of full disclosure](/2022/04/04/Kaseya-VSA-Full-Disclosure/)
