--- a/csirt.divd.nl/_cases/DIVD-2022-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00023.md
@@ -20,7 +20,7 @@ product: Spring Core Java framework
 versions: Java Development Kit (JDK) 9 or higher and Spring Framework versions 5.3.0 to 5.3.17, 5.2.0 to 5.2.19 and older versions.
 recommendation: "If you receive an email from DIVD referring to this case, the vulnerability has been confirmed. Please update to Spring Framework 5.3.18 and 5.2.20 or greater. If you are not able to do so, please consider downgrading to Java 8. Tomcat installations have the option of upgrading to mitigate the vulnerability."
 patch_status:	Available
--workaround: Downgrading to JDK 8.
+workaround: Downgrading to JDK 8.
 start: 2022-03-30
 end:
 timeline:
