--- a/csirt.divd.nl/_cases/DIVD-2022-00023.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00023.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: DIVD-2022-00023 - Spring Core RCE Zeroday
+title: DIVD-2022-00023 - Spring Core RCE Zeroday (CVE-2022-22965)
 divd: DIVD-2022-00023
 excerpt: "On JDK 9 and higher, the Spring framework is vulnerable to Remote Command Execution. DIVD is actively notifying owners of vulnerable systems."
 author: Max van der Horst
