--- a/csirt.divd.nl/_cases/DIVD-2022-00012.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00012.md
@@ -40,6 +40,9 @@ timeline:
 - start: 2022-03-21
   end: 
   event: Second batch of notifications sent
+- start: 2022-04-07
+  end:
+  event: Third batch of notifications sent
 
 
 ---
