--- a/csirt.divd.nl/_cases/DIVD-2022-00025.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00025.md
@@ -2,10 +2,9 @@
 layout: case
 title: DIVD-2022-00025 - VMware - CVE-2022-22954
 divd: DIVD-2022-00025
-excerpt: "VMware Workspace ONE Access and Identity Manager contain a remote code execution vulnerability due to server-side template injection. 
-A malicious actor with network access can trigger a server-side template injection that may result in remote code execution."
+excerpt: "VMware Workspace ONE Access and Identity Manager contain a remote code execution vulnerability due to server-side template injection. A malicious actor with network access can trigger a server-side template injection that may result in remote code execution."
 author: Victor Pasman
-lead: 
+lead: Victor Pasman
 redirect_from:
 - /DIVD-2022-00025/
 status : Open
@@ -18,8 +17,8 @@ researchers:
 cves: 
 - CVE-2022-22954
 product: VMware Workspace ONE Access (Access), VMware Identity Manager (vIDM), VMware vRealize Automation (vRA), VMware Cloud Foundation, vRealize Suite Lifecycle Manager 
-versions: versions prior to 	20.10.0.1, 20.10.0.0
-recommendation: "If you receive an email from DIVD referring to this case, the vulnerability has been confirmed. You should update the application to the newest versions 20.10.0.1, 20.10.0.0."
+versions: versions prior to 20.10.0.1, 20.10.0.0
+recommendation: If you receive an email from DIVD referring to this case, the vulnerability has been confirmed. You should update the application to the newest versions 20.10.0.1, 20.10.0.0.
 patch_status: Available
 -workaround: 
 start: 2022-04-12
@@ -41,7 +40,6 @@ A malicious actor with network access can trigger a server-side template injecti
 ## What you can do
 
 * If you're using a affected version of a VMware product, you should upgrade to 20.10.0.2+ to prevent exploitation.
-
 
 ## What we are doing
 
