--- a/csirt.divd.nl/_cases/DIVD-2022-00025.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00025.md
@@ -17,7 +17,7 @@ researchers:
 cves: 
 - CVE-2022-22954
 product: VMware Workspace ONE Access (Access), VMware Identity Manager (vIDM), VMware vRealize Automation (vRA), VMware Cloud Foundation, vRealize Suite Lifecycle Manager 
-versions: versions prior to 20.10.0.1, 20.10.0.0
+versions: prior to 20.10.0.1, 20.10.0.0
 recommendation: If you receive an email from DIVD referring to this case, the vulnerability has been confirmed. You should update the application to the newest versions 20.10.0.1, 20.10.0.0.
 patch_status: Available
 -workaround: 
@@ -30,6 +30,9 @@ timeline:
 - start: 2022-04-13
   end:	
   event: First version of this case file.
+- start: 2022-04-13
+  end:
+  event: DIVD sends first batch of notifications.
 
 ---
 ## Summary
