--- a/csirt.divd.nl/_cases/DIVD-2022-00019.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00019.md
@@ -21,7 +21,12 @@ timeline:
 - start: 2022-03-19
   end:
   event:  DIVD started reviewing applications globally.
-
+- start: 2022-03-30
+  end: 2022-03-31
+  event:  Scan of applications completed.
+- start: 2022-03-31
+  end: 2022-04-14
+  event:  Applications have been analysed. Findings have been communicated with Mendix for further actions.
 
 ---
 ## Summary
@@ -37,7 +42,7 @@ This effort is aimed at exposed personal data reachable via the public internet.
 
 ## What we are doing
 
-* DIVD is currently searching for applications and scanning these for incorrect use of access rules exposing personal data. Any application owner that is found to be vulnerable receives an email with the information.
+* DIVD is scanning and analysing applications for incorrect use of access rules, exposing personal data. Any application that is found to be vulnerable will be reported to Mendix for further actions and follow up.
 
 {% include timeline.html %}
 
