--- a/csirt.divd.nl/_cases/DIVD-2022-00019.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00019.md
@@ -42,7 +42,7 @@ This effort is aimed at exposed personal data reachable via the public internet.
 
 ## What we are doing
 
-* DIVD is scanning and analysing applications for incorrect use of access rules, exposing personal data. Any application that is found to be vulnerable will be reported to Mendix for further actions and follow up.
+* DIVD is scanning and analysing applications for incorrect use of access rules, exposing personal or other data. Any application that is found to be vulnerable will be reported to Mendix for further actions and follow up with their customers.
 
 {% include timeline.html %}
 
